# layers-edx

./: .gitignore  .gitmodules  CONTRIBUTING.md  EPQ_API_REFERENCE.md  LICENSE  NOTICE  README.md  TEST_STRATEGY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CROSS_LANGUAGE_TESTING.md  INTRO_CROSS_LANGUAGE_TESTING.md  JAVA_ORACLE_GUIDE.md  PYTEST_BRIDGE_GUIDE.md  SETUP_CHECKLIST.md  TESTING_ARCHITECTURE.md  TESTING_RECIPES.md
layers_edx/: __init__.py  atomic_shell.py  bremsstrahlung.py  element.py  kratio.py  layers.py  roi.py  simulation.py  units.py  xrt.py
layers_edx/correction/: __init__.py  pap.py  xpp.py
layers_edx/detector/: detector.py  eds_detector.py  lineshape_model.py
layers_edx/fitting/: culling.py  linear_fit.py  parameter.py
layers_edx/fitting/filter_fit/: filter.py  filter_fit.py  (+3 more)
layers_edx/material_properties/: bc.py  bf.py  er.py  fl.py  fym.py  ics.py  idr.py  jr.py  lc.py  mac.py  mip.py  si.py  sp.py  tp.py
layers_edx/quantification/: quantify_using_standards.py  reference_material.py  standard_material.py
layers_edx/resources/: ElectronConfig.csv  IonizationEnergies.csv  LineWeights.csv
layers_edx/spectrum/: base_spectrum.py  derived_spectrum.py  roi_spectrum.py  spectrum_properties.py
scripts/: epq_config.py  run_testdump.py  setup_epq.ps1  setup_epq.py  setup_epq.sh
src/: detector.py  main.py
src/debug/: debug_correction.py  debug_efficiency.py  debug_mac_det.py  debug_mac_low.py  debug_tp.py
src/detectors/: Octane Elect Plus 230118.xdet
test/: conftest.py  test_atomic_shell.py  test_bremsstrahlung.py  test_correction.py  test_element.py  test_epq_env.py  test_layers.py  test_material_properties.py  test_simulation.py  test_units.py
test/epq_dump/: conftest.py  core_models.py  csv_parser.py  test_atomic_shell.py  test_element.py  test_xrt.py  validators.py
test/java/: pom.xml
test/test_material_properties/: __init__.py  test_mac.java  test_mac.py  test_mip.java  test_mip.py
test/test_quantification/: test_quantify_model.py  test_quantify_spectrum.py
test/test_xrt/: __init__.py  test_xrt.java  test_xrt.py
(+18 files in other folders)
