[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layers-edx"
version = "0.1.0"
description = "A Python port of parts of the NIST EPQ library for electron probe quantification."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/username/layers-edx"
"NIST EPQ" = "https://github.com/usnistgov/EPQ"

[tool.setuptools]
packages = ["layers_edx"]
