[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layers-edx"
version = "0.1.0"
description = "A Python port of the NIST EPQ library for electron probe quantification."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/username/layers-edx"
"NIST EPQ" = "https://github.com/usnistgov/EPQ"

[tool.setuptools]
packages = ["layers_edx"]

[tool.pytest.ini_options]
# Skip EPQ tests by default
addopts = "-m 'not epq and not epq_env'"

